# BrassworksLauncher

./: .gitignore  Cargo.toml  README.md  changelog.md  comment.py  crowdin.yml
.github/scripts/: bump-version.mjs  crowdin-progress.mjs
.github/workflows/: bump-version.yml  crowdin.yml  live-install.yml  release.yml  test.yml
crates/brassworks-core/: Cargo.toml  featured.json
crates/brassworks-core/examples/: skin_profile.rs
crates/brassworks-core/src/: account.rs  auth.rs  error.rs  export.rs  featured.rs  github.rs  image_cache.rs  import.rs  instance.rs  launch.rs  lib.rs  modpack.rs  modrinth_plays.rs  packwiz_share.rs  paths.rs  ping.rs  progress.rs  remote.rs  saves.rs  settings.rs  skins.rs  stars.rs  versions.rs
crates/brassworks-core/src/forge/: github.rs  gitlab.rs  mod.rs
crates/brassworks-core/src/packs/: curseforge.rs  mod.rs  mrpack.rs
crates/brassworks-core/tests/: live_install.rs
crates/java/: Cargo.toml
crates/java/src/: lib.rs
crates/packwiz/: Cargo.toml
crates/packwiz/src/: curseforge.rs  error.rs  installer.rs  lib.rs  manifest.rs  model.rs  modrinth.rs  parallel.rs
crates/packwiz/src/export/: index.rs  metafile.rs  mod.rs  pack.rs  unsup.rs  zip.rs
crates/packwiz/src/unsup/: mod.rs  model.rs  resolve.rs  signing.rs
crates/portablemc/: Cargo.toml
crates/portablemc/src/: download.rs  http.rs  maven.rs  msa.rs  path.rs  serde.rs  tokio.rs
crates/portablemc/src/base/: mod.rs  serde.rs
crates/portablemc/src/fabric/: mod.rs  serde.rs
crates/portablemc/src/forge/: mod.rs  serde.rs
crates/portablemc/src/moj/: mod.rs  serde.rs
frontend/: index.html  main.tsx  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AboutModal.tsx  AccountMenu.tsx  AccountOverrideWarning.tsx  AddContentModal.tsx  AddInstanceModal.tsx  AddServerModal.tsx  BlockedModsDialog.tsx  BlockedModsPicker.tsx  Browse.tsx  ChangelogModal.tsx  ColorPicker.tsx  CommandPalette.tsx  DatapacksModal.tsx  ExportContentModal.tsx  ExportModal.tsx  FilterSidebar.tsx  FlavorPicker.tsx  InstanceSettingsView.tsx  InstancesView.tsx  LogUploadModal.tsx  LogViewer.tsx  Logo.tsx  Markdown.tsx  MicrosoftModal.tsx  ModpackBrowser.tsx  ModsView.tsx  NewsCard.tsx  OnboardingWizard.tsx  OptionalModsPicker.tsx  PackContentEditor.tsx  PlayView.tsx  RestartPrompt.tsx  ScreenshotsView.tsx  ServerCard.tsx  ServersView.tsx  SettingsView.tsx  ShareModal.tsx  Sidebar.tsx  SkinView.tsx  TabIntro.tsx  (+6 more)
frontend/lib/: api.ts  colors.ts  instanceIcons.tsx  modcache.ts  motd.tsx  providers.ts  quickSettings.tsx  toast.tsx  types.ts  useSupportedLoaders.ts
frontend/lib/cmd/: parser.ts  pins.ts  registry.ts  resolve.ts  types.ts
frontend/lib/cmd/areas/: account.ts  app.ts  content.ts  help.ts  instance.ts  modpack.ts  nav.ts  server.ts  settings.ts  skin.ts  world.ts
frontend/lib/i18n/: index.tsx  messages.ts  progress.json
frontend/lib/i18n/locales/: ar.json  cs.json  de.json  el.json  en-PT.json  en.json  es.json  fi.json  fr.json  hi.json  hr.json  ja.json  ko.json  lol.json  nl.json  pl.json  pt.json  ro.json  ru.json  uk.json
frontend/public/skins/: blueprints.json
frontend/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns  packwiz-file.icns
frontend/src-tauri/src/: auth_window.rs  commands.rs  discord.rs  lib.rs  main.rs  state.rs
