[workspace]
members = ["crates/portablemc", "crates/packwiz", "crates/java", "crates/brassworks-core", "frontend/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.5.0"
authors = ["Brassworks SMP"]
homepage = "https://github.com/brassworks"
repository = "https://github.com/brassworks/launcher"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.88.0"

[workspace.dependencies]
brassworks-core = { path = "crates/brassworks-core" }
portablemc = { path = "crates/portablemc" }
packwiz = { path = "crates/packwiz" }
java = { path = "crates/java" }

thiserror = "2.0.3"
anyhow = "1.0"

serde = { version = "1.0.215", features = ["derive"] }
serde_path_to_error = "0.1.16"
serde_json = "1.0.133"

xmlparser = "0.13.6"
toml = "0.8.19"

sha2 = "0.10.8"
hex = "0.4.3"

uuid = { version = "1.11.0", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }

regex = { version = "1.11.1", default-features = false, features = ["std", "perf", "unicode-perl"] }

sha1 = "0.10.6"
md5 = "0.7.0"
jsonwebtoken = "9.3.0"

indexmap = "2.7.0"
elsa = "1.10"
zip = "6.0.0"

once_cell = "1.20.2"

flate2 = "1.0"
tar = "0.4"

fastnbt = "2.5"

gethostname = "0.5.0"
dunce = "1.0.5"
os_info = "3.8.2"
dirs = "6.0.0"
windows-registry = "0.2.0"

tokio = "1.41.1"
reqwest = "0.12.9"

[profile.release]
opt-level = 3
strip = "debuginfo"
codegen-units = 4
lto = true
