[package]
name = "java"
description = "Java runtime discovery & selection for the Brassworks Launcher. Downloading is delegated to portablemc, this crate only finds and picks runtimes."
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["blocking"] }
zip.workspace = true
flate2.workspace = true
tar.workspace = true

[dev-dependencies]
tempfile = "3"
