[package]
name = "packwiz"
description = "A native Rust reimplementation of the packwiz modpack installer"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
sha2.workspace = true
sha1.workspace = true
hex.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
zip.workspace = true
ed25519-dalek = "2"
base64 = "0.22"

[dev-dependencies]
rand = "0.8"
tempfile = "3"
