[package]
name = "brassworks-launcher"
description = "Brassworks Launcher — desktop shell"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "brassworks_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
brassworks-core.workspace = true

tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"

serde.workspace = true
serde_json.workspace = true

discord-rich-presence = "0.2"
